--- a/Documentación/bibliography.bib
+++ b/Documentación/bibliography.bib
@@ -14,20 +14,37 @@
     urldate 		= {2020-12-16},
 }
 
-@techreport{knuth:1989:mathwriting,
-	author        = {Knuth, Donald E. and Larrabee, Tracy and Roberts, Paul M.},
-	title         = {Mathematical writing},
-	institution   = {Stanford University},
-	address       = {California, USA},
-	year          = {1987},
-	pages         = {1-117},
-	url 		  = {https://jmlr.csail.mit.edu/reviewing-papers/knuth_mathematical_writing.pdf}
+@online{data:01,
+  author = {Network Repository},
+  url = {http://networkrepository.com/},
+  urldate = {2020-11-16}
 }
 
-@online{url:techwriting,
-  author = {University of Hawaii. Kazuo Sugihara},
-  title = {Course Outline and Lecture Notes on Technical Communication},
-  year = 2016,
-  url = {http://www2.hawaii.edu/~sugihara/courses/HCU2016s_TC/notes/TechWriting1.html},
-  urldate = {2020-11-16}
+@article{cite:semillas,
+  author = {Morone Flaviano, Makse Hernan A.},
+  title = {Influence maximization in complex networks through optimal percolation. Nature},
+  year = {2015},
+  pages = "65–75",
+  urldate = {https://doi.org/10.1038/nature14604} ,
+}
+
+@article{cite:sinergia,
+  author = {Wang Wei, Tang Ming. Stanley H. Eugene, and Braunstei Lidia A.},
+  title = {Social contagions with communication channel alternation on multiplex networks.},
+  year = {2018}, 
+  pages = "98"
+}
+
+@article{cite:problemaIM,
+ author = {Domingos P, Richardson M Mining.}, 
+ title = {The network value of customers. Proceedings of the seventh ACM
+	  SIGKDD international conference on Knowledge discovery and data mining.},
+ year = {2001} ,
+ pages = "57–66"
+}
+@aritcle{cite:36,
+  author = {Centola D M, Macy M W, Eguıluz V M.} 
+  title = {Cascade dynamics of multiplex propagation.}
+  yeay = {2005}
+ pages = "200–200"
 }
