Documentation: Fix Definition System

--- a/Documentación/bibliography.bib
+++ b/Documentación/bibliography.bib
@@ -48,3 +48,17 @@
   yeay = {2005}
  pages = "200–200"
 }
+
+@aritcle{cite:30,
+  author = {Zheng Muhua, Linyuan Lu¨, and Ming Zhao.}, 
+  title = {Spreading in online social networks: The role of social reinforcement.},
+  year = {2013}
+}
+
+
+@aritcle{cite:12,
+  author = {Kempe D., Kleinberg J., and Tardos E. }, 
+  title = {Maximizing the spread of influence through a social network.},
+  In Proc. ACM SIGKDD Int. Conf. Knowl.Discovery Data Mining. 
+  year = {2003}, 
+ pages = {137–146}
